<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="user"
        type="es.layout.login.model.Usuario" />
</data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/space_4"
            android:paddingEnd="@dimen/space_4"
            android:paddingBottom="@dimen/space_5"
            tools:context=".MainActivity">
            <!-- Guideline superior aprox 38% para la ilustracion -->
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.36"/>
            <!-- Ilustracion-->
            <ImageView
                android:id="@+id/imgHeader"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/img_desc"
                android:adjustViewBounds="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/gTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/nomads_city_tour"/>
            <!-- Titulo -->
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textSize="@dimen/title_size"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/gTop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <!-- Usuario -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilUser"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_3"
                app:layout_constraintTop_toBottomOf="@id/txtTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/baseline_person_24"
                tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/hint_user"
                android:inputType="textPersonName"
                android:text='@={user.login}'/>
            </com.google.android.material.textfield.TextInputLayout>
            <!--Pasword-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPass"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_3"
                app:layout_constraintTop_toBottomOf="@id/tilUser"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:startIconDrawable="@drawable/baseline_lock_24"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPass"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/input_height"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:text='@={user.password}'/>
            </com.google.android.material.textfield.TextInputLayout>
            <!-- Boton Login-->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/btn_login"
                app:icon="@drawable/baseline_arrow_forward_24"
                app:iconGravity="textEnd"
                app:iconPadding="@dimen/space_2"
                app:layout_constraintTop_toBottomOf="@id/tilPass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
                <!-- Enlaces inferiores-->
            <TextView
                android:id="@+id/txtForgot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_4"
                android:text="@string/forgot_password"
                app:layout_constraintTop_toBottomOf="@id/btnLogin"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                    android:id="@+id/txtGetNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_2"
                    android:layout_marginTop="@dimen/space_3"
                    android:text="@string/get_new"
                    android:textStyle="bold"
                    app:layout_constraintBaseline_toBaselineOf="@id/txtForgot"
                    app:layout_constraintStart_toEndOf="@id/txtForgot"/>
              <TextView
                  android:id="@+id/txtHave"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="@dimen/space_2"
                  android:text="@string/have_account"
                  app:layout_constraintTop_toBottomOf="@id/txtForgot"
                  app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/txtCreateNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_2"
                android:text="@string/create_new"
                app:layout_constraintTop_toBottomOf="@id/txtHave"
                app:layout_constraintStart_toEndOf="@id/txtHave"/>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>